# template-projects

./: README.md
golang/: BUILD  Dockerfile  Index.ipynb  README.md  WORKSPACE
golang/cmd/: BUILD.bazel  main.go
