load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    deps = [
        "//common:go_default_library",
        "//events:go_default_library",
        "//events/store:go_default_library",
        "//events/types:go_default_library"
    ],
    importpath = "github.com/heroku/runtime-homework-r351574nc3/cmd",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "support-cases",
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_go_yaml_yaml//:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_gin_gonic_gin//json:go_default_library",
        "@com_github_ugorji_go//codec:go_default_library",
        "@com_github_go_playground_validator//:go_default_library",
        "//events:go_default_library"
    ],
    visibility = ["//visibility:public"],
)
